--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-        <html xmlns="http://www.w3.org/1999/xhtml"
-              xmlns:th="http://www.thymeleaf.org">
-          <head>
-            <title>Taco Cloud</title>
-          </head>
-          <body>
-            <h1>Welcome to...</h1>
-            <img th:src="@{/images/TacoCloud.png}"/>
-            <a th:href="@{/design}" id="another">Design your taco !!</a><br/>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Taco Cloud</title>
+</head>
+<body>
+<h1>Welcome to...</h1>
+<img th:src="@{/images/TacoCloud.png}"/>
+<a id="another" th:href="@{/design}">Design your taco !!</a><br/>
 </body>
 </html>
